# dictbrowser

./: .gitignore  CMakeLists.txt  editdict.cpp  editdict.h  editdict.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchedlist.cpp  searchedlist.h  searchedlist.ui  webpage.cpp  webpage.h
